--- a/03-multi-modal.html
+++ b/03-multi-modal.html
@@ -85,7 +85,7 @@
         </div>
         <div class="overlay">
             <div class="modal">
-               
+               <img src="" alt="">
             </div>
         </div>
     </section>
